# klatch

./: .gitattributes  .gitignore  CMakeLists.txt  COPYRIGHT  ChangeLog  README.rst  TODO  klatch_0.0.orig.tar.bz2.delta  klatch_0.0.orig.tar.bz2.id  klatch_0.1.orig.tar.bz2.delta  klatch_0.1.orig.tar.bz2.id  klatch_0.2.orig.tar.bz2.delta  klatch_0.2.orig.tar.bz2.id
debian/: changelog  control  copyright  rules
doc/: CMakeLists.txt  klatch.1.docbook
po/: CMakeLists.txt  Messages.sh  et.po  klatch.pot
src/: CMakeLists.txt  DictClient.cpp  DictClient.h  KlatchData.cpp.in  KlatchData.h  LookupWidget.cpp  LookupWidget.h  LookupWidget.ui  MainWindow.cpp  MainWindow.h  klatch.desktop  klatch.kcfg  klatchconfig.kcfgc  klatchui.rc  main.cpp
src/config/: DictPage.cpp  DictPage.h  DictPage.ui  DictServerDialog.cpp  DictServerDialog.h  DictServerDialog.ui  DictServerItem.cpp  DictServerItem.h  DictServerList.cpp  DictServerList.h  klatch.kcfg  klatchconfig.kcfgc
src/dict/: AbstractDictClient.cpp  AbstractDictClient.h  ClientPool.cpp  ClientPool.h  DatabaseInfo.cpp  DatabaseInfo.h  Definition.cpp  Definition.h  DictClient.cpp  DictClient.h  Matches.cpp  Matches.h
src/results/: ResultList.cpp  ResultList.h  ResultView.cpp  ResultView.h
src/scripts/: CustomActions.cpp  CustomActions.h  kvtml.js  print.js
src/utility/: algorithm.h  stream.cpp  stream.h  string.cpp  string.h
src/view/: DefinitionItem.cpp  DefinitionItem.h  DefinitionItem.ui
tests/: CMakeLists.txt
tests/static/: CMakeLists.txt  sa-clang.txt  sa-flawfinder.txt  sa-g++-effc++.txt  sa-sloccount.txt
tests/unit/: CMakeLists.txt  main.cpp
tests/unit/config/: DictServerItem_t.cpp  DictServerItem_t.h  DictServerList_t.cpp  DictServerList_t.h
tests/unit/dict/: ClientPool_t.cpp  ClientPool_t.h  DatabaseInfo_t.cpp  DatabaseInfo_t.h  Matches_t.cpp  Matches_t.h
tests/unit/results/: ResultList_t.cpp  ResultList_t.h
tests/unit/utility/: algorithm_t.cpp  algorithm_t.h  string_t.cpp  string_t.h
